<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailOrderAdminActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_detail_orde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_huge"
            android:fontFamily="@font/monreguler"
            android:text="@string/text_detail_order"
            android:textColor="@color/color_black1"
            android:textSize="@dimen/font_large_med"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_produk_yang_dibeli"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_regular"
            android:layout_marginEnd="@dimen/spacing_large"
            android:fontFamily="@font/monsemibold"
            android:text="@string/text_produk_yang_dibeli"
            android:textColor="@color/color_black1"
            android:textSize="@dimen/font_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_orde"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_orde" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_detail_produk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_regular"
            android:layout_marginEnd="@dimen/spacing_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_produk_yang_dibeli"
            app:layout_constraintTop_toBottomOf="@+id/tv_produk_yang_dibeli"
            tools:itemCount="2"
            tools:listitem="@layout/item_rv_detail_order_admin" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/monbold"
            android:text="@string/text_total_bayar"
            android:textColor="@color/color_black1"
            android:textSize="@dimen/font_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_detail_produk" />

        <TextView
            android:id="@+id/tv_bayar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/monbold"
            android:text="@string/text_tagihan"
            android:textColor="@color/red_700"
            android:textSize="@dimen/font_large"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_detail_pengiriman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/monsemibold"
            android:layout_marginTop="@dimen/spacing_regular"
            android:text="@string/text_detail_pengiriman"
            android:textColor="@color/color_black1"
            android:textSize="@dimen/font_large"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_alamat_checkout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_rv_admin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/tv_detail_pengiriman"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_pengiriman">

            <TextView
                android:id="@+id/tv_name_checkout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_large"
                android:fontFamily="@font/monsemibold"
                android:text="@string/text_deni"
                android:textColor="@color/color_black1"
                android:textSize="@dimen/font_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_isi_alamat_checkout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginBottom="@dimen/spacing_regular"
                android:fontFamily="@font/monmed"
                android:maxLines="3"
                android:text="@string/text_isi_alamat"
                android:textColor="@color/color_black1"
                android:textSize="@dimen/font_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_name_checkout"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_checkout" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_accept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_btn_accept"
            android:fontFamily="@font/monsemibold"
            android:text="@string/text_accept"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_alamat_checkout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>