<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.user.DetailUserActivity">

    <ImageView
        android:id="@+id/iv_good_day"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="@dimen/spacing_giant"
        android:src="@drawable/good_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name_produk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/spacing_large"
        android:fontFamily="@font/monreguler"
        android:text="@string/text_good_day_mocha"
        android:textColor="@color/color_black1"
        android:textSize="@dimen/font_large_med"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_good_day" />

    <TextView
        android:id="@+id/tv_harga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_huge"
        android:fontFamily="@font/monsemibold"
        android:text="@string/text_harga"
        android:textColor="@color/color_black1"
        android:textSize="@dimen/font_large"
        app:layout_constraintStart_toStartOf="@+id/tv_name_produk"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_produk" />

    <TextView
        android:id="@+id/tv_pcs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/monsemibold"
        android:text="@string/text_pcs"
        android:textColor="@color/color_black1"
        android:textSize="@dimen/font_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_harga" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_to_cart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_huge"
        android:layout_marginEnd="@dimen/spacing_huge"
        android:layout_marginBottom="@dimen/spacing_huge_slight"
        android:background="@drawable/bg_btn_signin"
        android:fontFamily="@font/monsemibold"
        android:text="@string/text_add_to_cart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/font_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>